objects/PMC_SS_SNOW_StatusMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>PMC_SS_CaseStatus__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                    <default>true</default>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_StatusTranslatedLabel__c</fullName>
        <label>Status Translated Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SNOW_Status__c</fullName>
        <label>SNOW Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SNOW Status Mapping</label>
    <pluralLabel>SNOW Status Mapping</pluralLabel>
</CustomObject>